tests/idris2/reg041/expected
1/1: Building tuple (tuple.idr)
Error: While processing left hand side of tupleBug. Can't match on (?_, ?_) as it must have a polymorphic type.

tuple:2:15--2:19
 1 | tupleBug : Pair () a -> ()
 2 | tupleBug (_, (_, _)) = ()
                   ^^^^

Error: While processing left hand side of odd. Can't match on () as it must have a polymorphic type.

tuple:5:5--5:7
 1 | tupleBug : Pair () a -> ()
 2 | tupleBug (_, (_, _)) = ()
 3 | 
 4 | odd : a -> Bool
 5 | odd () = False
         ^^

